# python-intermediate-inflammation

./: inflammation-analysis.py  pyproject.toml  requirements.txt
inflammation/: models.py  views.py
tests/: test_models.py  test_patient.py
